<resources>
    <string name="app_name">Just Java</string>
    <string name="action_settings">Settings</string>
    <string name="name">Type your Name</string>
    <string name="cream">Whipped creame</string>
    <string name="chocolate">Chocolate</string>
    <string name="toppings">toppings</string>
    <string name="quantity">quantity</string>
    <string name="orderSummary">order summary</string>
    <string name="order">order</string>
    <string name="javaName">Name:</string>
    <string name="addCream">Add whipped cream?</string>
    <string name="addChocolate">Add chocolate?</string>
    <string name="javaQuantity">Quantity:</string>
    <string name="total">Total:</string>
    <string name="thank">Thank you!</string>
    <string name="coffeeOrder">Coffee Order</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="moreTip">You cannot have more than 100 coffees</string>
    <string name="author">Author:Vic</string>
    <string name="from">From:SJ56 不忘初心方得始终</string>
    <string name="pull">Pull to get the Surprise~</string>
    <string-array name="caseList">
        <item>生日贺卡案例</item>
        <item>计分器案例</item>
        <item>咖啡点单机案例</item>
    </string-array>
    <string-array name="noteList">
        <item>1A 简单View及入门</item>
        <item>1B ViewGroup布局入门及控件间距</item>
        <item>PS1 生日贺卡实践</item>
        <item>2A 咖啡点单案例上</item>
        <item>2B 生日贺卡案例下</item>
        <item>PS2 比分计数器案例</item>
        <item>3A OOP编程上</item>
        <item>3B OOP编程下</item>
        <item>教你查看Android开发者文档</item>
        <item>下载源码</item>
    </string-array>
    
</resources>
